Implements some tailwind css to the pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>paynow-ui</title>
   </head>
-  <body>
+  <body class="bg-grey-lightest text-grey-darkest">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
